# ray-tracer-challenge

./: .gitignore  CMakeLists.txt  ray-tracer-challenge.sln  ray-tracer-challenge.vcxproj  ray-tracer-challenge.vcxproj.filters
include/: cannon.h  environment.h  math_functions.h  projectile.h  tuple.h
src/: CMakeLists.txt  cannon.cpp  environment.cpp  main.cpp  math_functions.cpp  projectile.cpp  tuple.cpp
tests/: CMakeLists.txt  tuple_test.cpp
